Rename format types

--- a/dd2/file_extensions.json
+++ b/dd2/file_extensions.json
@@ -126,7 +126,7 @@
     },
     "user": {
       "Locales": [],
-      "Type": "Userdata",
+      "Type": "UserData",
       "Version": 2,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
@@ -162,7 +162,7 @@
     },
     "sdftex": {
       "Locales": [],
-      "Type": "SdfTexture",
+      "Type": "SDFTexture",
       "Version": 858718212,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -184,14 +184,14 @@
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 24021,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ainvm": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 30,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -219,7 +219,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 27,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -269,14 +269,14 @@
     },
     "ikleg2": {
       "Locales": [],
-      "Type": "IKLeg2",
+      "Type": "IkLeg2",
       "Version": 24,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "iklookat2": {
       "Locales": [],
-      "Type": "IKLookat2",
+      "Type": "IkLookAt2",
       "Version": 26,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -304,14 +304,14 @@
     },
     "aiwayp": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikls": {
       "Locales": [],
-      "Type": "IKLegSpine",
+      "Type": "IkLegSpine",
       "Version": 28,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -332,42 +332,42 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikbodyrig": {
       "Locales": [],
-      "Type": "IKBodyRig",
+      "Type": "IkBodyRig",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikhd": {
       "Locales": [],
-      "Type": "IKHand",
+      "Type": "IkHand2",
       "Version": 5,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "fbik": {
       "Locales": [],
-      "Type": "FullBodyIK",
+      "Type": "FullBodyIKRig",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikmulti": {
       "Locales": [],
-      "Type": "IKMulti",
+      "Type": "IkMultiBone",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "iktrain2": {
       "Locales": [],
-      "Type": "IKTrain2",
+      "Type": "IkTrain2",
       "Version": 1,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -423,7 +423,7 @@
     },
     "gpbf": {
       "Locales": [],
-      "Type": "GpuBuffer",
+      "Type": "ByteBuffer",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -571,7 +571,7 @@
     },
     "chf": {
       "Locales": [],
-      "Type": "ColliderHeightField",
+      "Type": "CollisionHeightField",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -635,7 +635,7 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 4064419,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -645,7 +645,7 @@
         "ar",
         "ja"
       ],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 620035,
       "CanNotHaveX64": true,
       "CanHaveLang": true,
@@ -703,21 +703,21 @@
     },
     "aimapattr": {
       "Locales": [],
-      "Type": "AiMapAttribute",
+      "Type": "AIMapAttribute",
       "Version": 46,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ainvmmgr": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 8,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "aiwaypmgr": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 8,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -763,14 +763,14 @@
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
