--- a/dmc5/file_extensions.json
+++ b/dmc5/file_extensions.json
@@ -112,7 +112,7 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -134,14 +134,14 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 10,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 1769672,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -229,7 +229,7 @@
     },
     "gui": {
       "Locales": [],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 270020,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -250,7 +250,7 @@
     },
     "ikdamage": {
       "Locales": [],
-      "Type": "IKDamage",
+      "Type": "IkDamageAction",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -292,7 +292,7 @@
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 3017,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -354,7 +354,7 @@
     },
     "aimap": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 28,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -369,7 +369,7 @@
     },
     "aimapattr": {
       "Locales": [],
-      "Type": "AiMapAttribute",
+      "Type": "AIMapAttribute",
       "Version": 28,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -397,14 +397,14 @@
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
