--- a/mhwilds/file_extensions.json
+++ b/mhwilds/file_extensions.json
@@ -119,7 +119,7 @@
   "Info": {
     "user": {
       "Locales": [],
-      "Type": "Userdata",
+      "Type": "UserData",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -170,7 +170,7 @@
     },
     "gui": {
       "Locales": [],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 850041,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -198,7 +198,7 @@
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 24022,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -240,7 +240,7 @@
     },
     "sdftex": {
       "Locales": [],
-      "Type": "SdfTexture",
+      "Type": "SDFTexture",
       "Version": 481229356,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -289,14 +289,14 @@
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 8,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -323,7 +323,7 @@
     },
     "gpbf": {
       "Locales": [],
-      "Type": "GpuBuffer",
+      "Type": "ByteBuffer",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -372,7 +372,7 @@
     },
     "jointlodgroup": {
       "Locales": [],
-      "Type": "JointLodGroup",
+      "Type": "JointLODGroup",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -421,7 +421,7 @@
     },
     "vmap": {
       "Locales": [],
-      "Type": "MeshVertexMaping",
+      "Type": "MeshVertexMapping",
       "Version": 240724984,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -487,7 +487,7 @@
     },
     "chf": {
       "Locales": [],
-      "Type": "ColliderHeightField",
+      "Type": "CollisionHeightField",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -522,7 +522,7 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 5571972,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -557,7 +557,7 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -613,7 +613,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 28,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -685,21 +685,21 @@
     },
     "iklookat2": {
       "Locales": [],
-      "Type": "IKLookat2",
+      "Type": "IkLookAt2",
       "Version": 26,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ainvm": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 30,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ainvmmgr": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 8,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -784,14 +784,14 @@
     },
     "ikls": {
       "Locales": [],
-      "Type": "IKLegSpine",
+      "Type": "IkLegSpine",
       "Version": 28,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikmulti": {
       "Locales": [],
-      "Type": "IKMulti",
+      "Type": "IkMultiBone",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -804,28 +804,28 @@
     },
     "fbik": {
       "Locales": [],
-      "Type": "FullBodyIK",
+      "Type": "FullBodyIKRig",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "iklizard": {
       "Locales": [],
-      "Type": "IKLizard",
+      "Type": "IkLizard",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikwagon": {
       "Locales": [],
-      "Type": "IKWagon",
+      "Type": "IkWagon",
       "Version": 1,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "ikleg2": {
       "Locales": [],
-      "Type": "IKLeg2",
+      "Type": "IkLeg2",
       "Version": 24,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -931,7 +931,7 @@
     },
     "aimapattr": {
       "Locales": [],
-      "Type": "AiMapAttribute",
+      "Type": "AIMapAttribute",
       "Version": 46,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
