--- a/re3/file_extensions.json
+++ b/re3/file_extensions.json
@@ -127,7 +127,7 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -141,7 +141,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 11,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -262,14 +262,14 @@
     },
     "user": {
       "Locales": [],
-      "Type": "Userdata",
+      "Type": "UserData",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 9018,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -283,7 +283,7 @@
     },
     "aimap": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 34,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -304,14 +304,14 @@
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 4,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -531,7 +531,7 @@
       "Locales": [
         "stm"
       ],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 340020,
       "CanNotHaveX64": true,
       "CanHaveLang": true,
@@ -576,7 +576,7 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 2228526,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -632,7 +632,7 @@
     },
     "aimapattr": {
       "Locales": [],
-      "Type": "AiMapAttribute",
+      "Type": "AIMapAttribute",
       "Version": 34,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
