--- a/re7/file_extensions.json
+++ b/re7/file_extensions.json
@@ -143,7 +143,7 @@
     },
     "aimap": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 8,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -199,7 +199,7 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -220,7 +220,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -253,21 +253,21 @@
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -288,7 +288,7 @@
     },
     "gui": {
       "Locales": [],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 180014,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -301,7 +301,7 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 1179750,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
