--- a/sf6/file_extensions.json
+++ b/sf6/file_extensions.json
@@ -152,7 +152,7 @@
       "Locales": [
         "stm"
       ],
-      "Type": "Userdata",
+      "Type": "UserData",
       "Version": 2,
       "CanHaveX64": true,
       "CanNotHaveX64": true,
@@ -182,7 +182,7 @@
     },
     "iklookat2": {
       "Locales": [],
-      "Type": "IKLookat2",
+      "Type": "IkLookAt2",
       "Version": 21,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -217,21 +217,21 @@
     },
     "ikbodyrig": {
       "Locales": [],
-      "Type": "IKBodyRig",
+      "Type": "IkBodyRig",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 3,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "jointlodgroup": {
       "Locales": [],
-      "Type": "JointLodGroup",
+      "Type": "JointLODGroup",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -299,7 +299,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 25,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -407,7 +407,7 @@
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 20021,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -468,7 +468,7 @@
     },
     "fbik": {
       "Locales": [],
-      "Type": "FullBodyIK",
+      "Type": "FullBodyIKRig",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -496,14 +496,14 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 3474371,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "gui": {
       "Locales": [],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 530034,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -563,14 +563,14 @@
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -609,7 +609,7 @@
     },
     "gpbf": {
       "Locales": [],
-      "Type": "GpuBuffer",
+      "Type": "ByteBuffer",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -663,7 +663,7 @@
     },
     "ainvm": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 17,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -757,7 +757,7 @@
     },
     "aiwayp": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 5,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
