--- a/re3rt/file_extensions.json
+++ b/re3rt/file_extensions.json
@@ -138,7 +138,7 @@
     },
     "uvar": {
       "Locales": [],
-      "Type": "Uvar",
+      "Type": "UserVariables",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -152,7 +152,7 @@
     },
     "rcol": {
       "Locales": [],
-      "Type": "Rcol",
+      "Type": "RequestSetCollider",
       "Version": 20,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -281,14 +281,14 @@
     },
     "user": {
       "Locales": [],
-      "Type": "Userdata",
+      "Type": "UserData",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "mcol": {
       "Locales": [],
-      "Type": "MeshCollider",
+      "Type": "CollisionMesh",
       "Version": 13020,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -302,7 +302,7 @@
     },
     "aimap": {
       "Locales": [],
-      "Type": "AiMap",
+      "Type": "AIMap",
       "Version": 41,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -323,14 +323,14 @@
     },
     "lprb": {
       "Locales": [],
-      "Type": "LightProbe",
+      "Type": "LightProbes",
       "Version": 6,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
     },
     "prb": {
       "Locales": [],
-      "Type": "Probe",
+      "Type": "Probes",
       "Version": 9,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -550,7 +550,7 @@
       "Locales": [
         "stm"
       ],
-      "Type": "Gui",
+      "Type": "GUI",
       "Version": 430027,
       "CanNotHaveX64": true,
       "CanHaveLang": true,
@@ -595,7 +595,7 @@
     },
     "efx": {
       "Locales": [],
-      "Type": "Efx",
+      "Type": "Effect",
       "Version": 2818689,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -651,7 +651,7 @@
     },
     "aimapattr": {
       "Locales": [],
-      "Type": "AiMapAttribute",
+      "Type": "AIMapAttribute",
       "Version": 42,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
@@ -675,7 +675,7 @@
     },
     "gpbf": {
       "Locales": [],
-      "Type": "GpuBuffer",
+      "Type": "ByteBuffer",
       "Version": 2,
       "CanNotHaveX64": true,
       "CanNotHaveLang": true
